# backlooper_backend

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  dev-requirements.txt  setup.cfg
.github/workflows/: build-macos.yml  build-windows.yml  upload-pypi.yml
docs/: conf.py  index.rst
docs/source/: __main__.rst  audio.rst  modules.rst  session.rst  striped_storage.rst
src/backlooper/: .gitignore  __main__.py  _clicktrack.py  audio.py  config.py  session.py  striped_storage.py
src/backlooper/tests/: test_striped_storage.py
