[metadata]
name = backlooper
version = 0.0.0
author = Steven van Gemert
author_email = steven@vangemert.dev
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spmvg/backlooper_backend

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    sounddevice
    numpy
    matplotlib
    pandas
    scipy
    websockets


[options.packages.find]
where = src
